trunk/Archive2/75/1d1609ace8fb6c/output
main.cpp: In function ‘int main()’:
main.cpp:18:10: error: ‘sample::sample(int)’ is protected
          sample(int a) { a = a; }
          ^
main.cpp:33:41: error: within this context
     std::shared_ptr<sample>(new sample(5));
                                         ^
main.cpp:34:18: error: ‘obj’ was not declared in this scope
     std::cout << obj->a <<std::endl;
                  ^
